@@ -75,6 +75,6 @@ public class ClasspathArtifactResolver implements ArtifactResolver {
 
     public ArtifactResult resolveArtifact(RepositorySystemSession session, ArtifactRequest request)
             throws ArtifactResolutionException {
-        return resolveArtifacts(session, Collections.singleton(request)).get(0);
+        return resolveArtifacts(session, Collections.singleton(request)).getFirst();
     }
 }
