@@ -26,7 +26,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.apache.maven.MavenTestHelper;
 import org.apache.maven.api.settings.InputSource;
@@ -113,7 +112,7 @@ class PomConstructionWithSettingsTest {
         String localRepoPath = System.getProperty(
                 "maven.repo.local",
                 System.getProperty("user.home") + File.separator + ".m2" + File.separator + "repository");
-        Path absolutePath = Paths.get(localRepoPath).toAbsolutePath();
+        Path absolutePath = Path.of(localRepoPath).toAbsolutePath();
         config.setLocalRepository(MavenRepositorySystem.createArtifactRepository(
                 "local", absolutePath, new DefaultRepositoryLayout(), null, null));
         config.setActiveProfileIds(settings.getActiveProfiles());
